syntax = "proto3";

package com.hymnsmobile.pipeline.models;

option java_multiple_files = true;

enum HymnType {
  DEFAULT = 0;
  CLASSIC_HYMN = 1;
  NEW_TUNE = 2;
  NEW_SONG = 3;
  CHILDREN_SONG = 4;
  HOWARD_HIGASHI = 5;
  DUTCH = 6;
  GERMAN = 7;
  CHINESE = 8;
  CHINESE_SIMPLIFIED = 9;
  CHINESE_SUPPLEMENTAL = 10;
  CHINESE_SUPPLEMENTAL_SIMPLIFIED = 11;
  CEBUANO = 12;
  TAGALOG = 13;
  FRENCH = 14;
  SPANISH = 15;
}

message Hymn {
  SongReference reference = 1;
  string title = 2;
  repeated Verse lyrics = 3;
  repeated string category = 4;
  repeated string sub_category = 5;
  repeated string author = 6;
  repeated string composer = 7;
  repeated string key = 8;
  repeated string time = 9;
  repeated string meter = 10;
  repeated string scriptures = 11;
  repeated string hymn_code = 12;
  map<string, string> music = 13;
  map<string, string> svg_sheet = 14;
  map<string, string> pdf_sheet = 15;
  repeated SongLink languages = 16;
  repeated SongLink relevants = 17;
}

message SongReference {
  HymnType type = 1;
  string number = 2;
}

message SongLink {
  optional string name = 1;
  SongReference reference = 2;
}

message Verse {
  string verse_type = 1;
  repeated Line lines = 2;
}

message Line {
  string line_content = 1;
  optional string transliteration = 2;
}

// An error encountered during processing of the pipeline.
message PipelineError {
  enum Severity {
    // Should log error, but not the end of the world.
    WARNING = 0;
    // Blocks the hymn from ingestion but does not block the pipeline.
    ERROR = 1;
    // Blocks the entire pipeline from completion.
    FATAL = 2;
  }
  string message = 1;
  Severity severity = 2;
}